un-did previous css tweaks to make quick menu larger -- this fixes problems on mobile devices

--- a/style/main.css
+++ b/style/main.css
@@ -37,7 +37,6 @@
 body {
     background-color: black;
     font-family: 'aquiline', serif;
-    /*font-size: 250%;*/
     color: white;
 }
 
@@ -162,8 +161,6 @@ button:hover {
 /* Quick Menu Style */
 [data-component="quick-menu"] {
     font-family: 'aquiline';
-/*    height: 5rem;
-    max-height: 5rem;*/
 }
 
 /* Quick Menu Buttons Style */
